# JK-CORE

./: ----------_--------_-_-------.docx  .$JK_CORE.drawio.bkp  .gitignore  JK_CORE.drawio  docker-compose.yml  Оглавления.MD
backend/: .env  Dockerfile  pyproject.toml
backend/config/: api_urls.py  settings.py  storages.py  urls.py
backend/employees/: admin.py  models.py  serializers.py  urls.py  views.py
backend/employees/migrations/: 0001_initial.py
backend/portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
backend/portfolio/migrations/: 0001_initial.py  0002_portfolio_client_portfolio_executors.py  0003_alter_portfolio_image.py
backend/project_manager/: admin.py  models.py  serializers.py  urls.py  views.py
backend/project_manager/migrations/: 0001_initial.py
backend/services/: admin.py  models.py  serializers.py  urls.py  views.py
backend/services/migrations/: 0001_initial.py  0002_service_detailed_description_service_video_url.py  0003_alter_service_image.py  0004_alter_service_image.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/jk-frontend/: package-lock.json  package.json
frontend/jk-frontend/src/: App.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChangePassword.jsx  EmployeeList.jsx  Login.jsx  Logout.jsx  Menu.jsx  PortfolioDetail.jsx  PortfolioList.jsx  Profile.jsx  ProjectAdminPanel.jsx  ProjectDetail.jsx  ProjectForm.jsx  ProjectList.jsx  ServiceDetail.jsx  ServiceList.jsx  Statistics.jsx
frontend/src/styles/: ChangePassword.css  Login.css  (+12 more)
(+13 files in other folders)
