[tool.poetry]
name = "jk-core"
version = "0.1.0"
description = "Курсовой проект Ягуара Ковалёва и Олега Шилова"
authors = ["Jaguar K. & Oleg Sh."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = {extras = ["redis"], version = "^5.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
